--- a/Test/EShop.Test/EShop.Test.csproj
+++ b/Test/EShop.Test/EShop.Test.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -19,6 +19,21 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="00-Framework\" />
+    <Folder Include="01-Core\ApplicationService\" />
+    <Folder Include="01-Core\DomainModels\OrderAggregate\" />
+    <Folder Include="01-Core\DomainModels\ProductAggregate\" />
+    <Folder Include="01-Core\DomainServices\" />
+    <Folder Include="02-Infrastructures\DateAccess\" />
+    <Folder Include="03-Endpoints\EShop.RestApi\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Source\01-Core\ApplicationServices\ApplicationServices.csproj" />
+    <ProjectReference Include="..\..\Source\02-Infrastructures\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
