--- a/Source/01-Core/DomainModels/DomainModels.csproj
+++ b/Source/01-Core/DomainModels/DomainModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\00-Framework\Framework\Framework.csproj" />
+  </ItemGroup>
+
 </Project>
