--- a/Source/03-Endpoints/EShop.RestApi/appsettings.json
+++ b/Source/03-Endpoints/EShop.RestApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EShop": "Server=.; Initial Catalog=EShop; Integrated Security=SSPI; Application Name=EShop;"
+  }
 }
